--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "pg": "^8.8.0",
     "pkg": "^5.8.0"
   },
   "scripts": {
